fix: filter by region aligned to right

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@
 }
 
 .filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
 
 .filter.active {
     display:flex;
